# portfolio-v2

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .nvmrc  .prettierignore  .prettierrc.js  .yarnrc.yml  README.md  cspell.config.js  gatsby-config.mjs  gatsby-node.mjs  gatsby-ssr.tsx  jest-preprocess.js  jest.config.js  lint-staged.config.js  package.json  playwright.config.ts  renovate.json5  tsconfig.json  vitest.config.ts
.github/workflows/: e2e-testing.yml  testing.yml  unit-testing.yml
jest/: jest-preprocess.js  jest-serializer-react-helmet-async.tsx
netlify/edge-functions/: og.tsx
playwright/: index-page.spec.ts  kitchen-sink.spec.ts  meta.spec.ts  navigation.spec.ts  visit-pages.spec.ts
scripts/: Cargo.toml  ignore-title-case.txt
scripts/src/: lib.rs
src/: declarations.d.ts
src/components/: seo.tsx
src/constants/: json-ld.ts  meta.mjs
src/data/: footer-navigation.yaml  kitchen-sink.mdx  photography-body.mdx  redirects.yaml  resume-body.mdx
src/hooks/: use-distinct-categories.tsx  use-primary-navigation.tsx  use-query-string-reducer.tsx  use-query-string.tsx  use-site-metadata.tsx
src/pages/: appearances.mdx  garden.css.ts  garden.tsx  index.css.ts  index.tsx  resume.tsx  tutorials.tsx  uses.mdx  writing.css.ts  (+2 more)
static/: _redirects  robots.txt
vitest/: serializer-react-helmet-async.tsx  setup.ts
www/: .env.example  README.md  gatsby-browser.js  gatsby-browser.tsx  gatsby-config.js  gatsby-config.mjs  gatsby-config.ts  gatsby-node.js  gatsby-node.mjs  gatsby-node.ts  gatsby-ssr.js  gatsby-ssr.tsx  package.json
(+379 files in other folders)
