[package]
name = "scripts"
description = "Scripts to ease the generation of new content"
version = "0.1.0"
edition = "2021"
authors = ["LekoArts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
color-eyre = "0.6.0"
dialoguer = "0.9.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_yaml = "0.8.23"
slug = "0.1.4"
