[package]
name = "scripts"
description = "Utility scripts for my website"
version = "0.1.0"
edition = "2021"
authors = ["LekoArts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
color-eyre = "0.6.2"
dialoguer = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
slug = "0.1.5"
titlecase = "2.2.1"
